complete styles commit

--- a/src/container/pages/auth/styles/overlay.css
+++ b/src/container/pages/auth/styles/overlay.css
@@ -3,4 +3,13 @@ body{
 }
 .dottedBoxImage{
     margin-top: 30%;
+    margin-left: 35%;
+}
+
+.over_lay img:hover{
+    transform: scale(1.2);
+}
+
+.over_lay img{
+    transition: all 0.2s ease-in-out;
 }
