--- a/src/container/pages/auth/styles/home.css
+++ b/src/container/pages/auth/styles/home.css
@@ -14,23 +14,33 @@ body{
 .home_top_div{
     height: 58.5%;
     width: 100%;
-    /* background-color: white; */
     padding: 0px;
     position: static;
     background-image: url("../../../../assets/images/svg/homeBackground.svg");
+    background-repeat: no-repeat;
 }
 
 .home_inner_bottom_left_div{
     height: 100%;
     width: 20%;
+    margin-top: 9%;
     background-color: #0f3c48;
+}
+
+.transparent_div{
+    background-color: #0d293199;
+    height: 30%;
+    width: 50%;
+    margin-top: -49%;
+    margin-left: 20%;
+    filter: blur(2px);
 }
 
 .home_inner_bottom_right_div{
     height: 60%;
     width: 27%;
     position: relative;
-    top:29.5%;
+    bottom: 70.5%;
     left: 67.7%;
     background-color: rgba(0, 0, 0, 0.7);
     padding: 20pt;
@@ -45,20 +55,56 @@ color: white;
 .home_inner_bottom_right_div p{
     font-size: 15px;
 }
+.discover_div{
+    text-align: left;
+    margin-left: 5%;
+    width: 55%;
+    line-height: 0.9cm;
+}
 
 .discover_the_water{
-    font-size: 50pt;
+    font-size: 30pt;
     font-family: sans-serif;
     color: #fff;
     position:relative;
-    top: 40%;
-    right: 30px;
+    top: 20%;
     padding: 0px;
     margin-right: 30%;
-    background-color: blue;
 }
 
 .discover_the_water_p{
     font-size: 25pt;
-    font-weight: 10px;
+    font-weight: lighter;
+}
+
+.home_bottom_div{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: -28% ;
+}
+
+.home_picture1, .home_picture2, .home_picture3{
+    width: 25%;
+    height: 50%;
+}
+
+.home_picture1 h3, .home_picture2 h3, .home_picture3 h3{
+    font-size: large;
+    color: white;
+}
+
+.home_picture1 p, .home_picture2 p, .home_picture3 p{
+    color: white;
+}
+
+.picture1, .picture2, .picture3{
+    width: 100%;
+}
+
+.home_picture1 img:hover, .home_picture2 img:hover, .home_picture3 img:hover {
+    transform: scale(1.2);
+}
+
+.home_picture1 img, .home_picture2 img, .home_picture3 img{
+    transition: all 0.2s ease-in-out;
 }
