--- a/src/container/pages/auth/styles/home.css
+++ b/src/container/pages/auth/styles/home.css
@@ -6,44 +6,44 @@ body{
 
 .Home{
     background-color: #0E323c;
-    height: 100vh;
-    width: 60vw;
+    height: 52rem;
+    width: 62.6rem;
     margin: auto;
 }
 
 .home_top_div{
-    height: 58.5%;
-    width: 100%;
-    padding: 0px;
+    height: 30rem;
+    width: 62.5rem;
+    padding: 0rem;
     position: static;
     background-image: url("../../../../assets/images/svg/homeBackground.svg");
     background-repeat: no-repeat;
 }
 
 .home_inner_bottom_left_div{
-    height: 100%;
-    width: 20%;
-    margin-top: 9%;
+    height: 31rem;
+    width: 12.6rem;
+    margin-top: 4.5rem;
     background-color: #0f3c48;
 }
 
 .transparent_div{
     background-color: #0d293199;
-    height: 30%;
-    width: 50%;
-    margin-top: -49%;
-    margin-left: 20%;
+    height: 9rem;
+    width: 30rem;
+    margin-top: -31rem;
+    margin-left: 12.5rem;     
     filter: blur(2px);
 }
 
 .home_inner_bottom_right_div{
-    height: 60%;
-    width: 27%;
+    height: 19rem;
+    width: 16.5rem;
     position: relative;
-    bottom: 70.5%;
-    left: 67.7%;
+    bottom: 23rem;
+    left: 42rem;
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 20pt;
+    padding: 2rem;
     text-align: left;
 }
 
@@ -53,39 +53,41 @@ color: white;
 }
 
 .home_inner_bottom_right_div p{
-    font-size: 15px;
+    font-size: 0.85rem;
 }
 .discover_div{
     text-align: left;
-    margin-left: 5%;
-    width: 55%;
-    line-height: 0.9cm;
+    margin-left: 3rem;
+    width: 35rem;
+    line-height: 2.2rem;
 }
 
 .discover_the_water{
-    font-size: 30pt;
+    font-size: 3rem;
     font-family: sans-serif;
     color: #fff;
     position:relative;
-    top: 20%;
-    padding: 0px;
-    margin-right: 30%;
+    top: 0.5rem;
+    padding: 0rem;
+    margin-right: 3rem;
 }
 
 .discover_the_water_p{
-    font-size: 25pt;
-    font-weight: lighter;
+    font-size: 2.5rem;
+    font-weight: 100;
 }
 
 .home_bottom_div{
     display: flex;
     justify-content: space-evenly;
-    margin-top: -28% ;
+    margin-top: -15rem;
 }
 
 .home_picture1, .home_picture2, .home_picture3{
-    width: 25%;
-    height: 50%;
+    width: 15rem;
+    height: 12rem;
+    margin-left: 1.5rem;
+    margin-top: -3rem;
 }
 
 .home_picture1 h3, .home_picture2 h3, .home_picture3 h3{
