--- a/src/container/pages/auth/styles/startJourney.css
+++ b/src/container/pages/auth/styles/startJourney.css
@@ -3,27 +3,33 @@ body{
 }
 
 .start_journey{
-    height: 500pt;
-    width: 500pt;
-    /* background-color: blue; */
+    height: 50rem;
+    width: 50rem;
     margin: auto;
-    padding: 50pt;
+    padding: 5%;
 }
 
 .start_journey_div_1, .start_journey_div_2{
     width: 70%;
     height: 25%;
     margin: auto;
-    font-size: large;
-    font-weight: 500;
-    padding-top: 70pt;
+    /* font-size: large; */
+    /* font-weight: 500; */
+    padding-top: 10%;
 }
 
 
 .start_journey_div_1{
     background-color: #1c2f35;
     color: white;
-    margin-bottom: 10pt ;
+    font-size: large;
+    font-weight: 500;
+    margin-bottom: 2% ;
+}
+
+.start_journey_div_1 p{
+    padding-left: 30%;
+    font-size: 1.5rem;
 }
 
 .start_journey_div_2{
@@ -32,6 +38,24 @@ body{
     display: flex;
 }
 
+.start_journey_div_2 p{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: black;
+    padding-left: -2rem;
+}
+
 .startJourneyArrow{
-    width: 100pt;
+    width: 50%;
+}
+
+.start_journey_div_2 a{
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+
+.start_journey_div_2 a:hover{
+    transform: scale(1.1);
+    text-decoration: underline;
+    color: #1c2f35;
 }
