--- a/src/container/pages/auth/styles/overlay.css
+++ b/src/container/pages/auth/styles/overlay.css
@@ -2,8 +2,8 @@ body{
     background-color: #2D2C2C;
 }
 .dottedBoxImage{
-    margin-top: 30%;
-    margin-left: 35%;
+    margin-top: 22rem;
+    margin-left: 26rem;
 }
 
 .over_lay img:hover{
