--- a/src/container/pages/auth/styles/sass.scss
+++ b/src/container/pages/auth/styles/sass.scss
@@ -1,6 +1,6 @@
 .over_lay{
-    width: 60vw;
-    height: 100vh;
+    width: 70rem;
+    height: 65rem;
     background-color: black;
     border-radius: 0.4cm;
     position: center;
